add rbd mount support to API
