# restapi/operations/mounts/get_mount_rbd_responses.go
@@ -1,0 +1,116 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package mounts
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/bensallen/rbd/models"
+)
+
+// GetMountRbdOKCode is the HTTP code returned for type GetMountRbdOK
+const GetMountRbdOKCode int = 200
+
+/*GetMountRbdOK RBD mount entry
+
+swagger:response getMountRbdOK
+*/
+type GetMountRbdOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.MountRbd `json:"body,omitempty"`
+}
+
+// NewGetMountRbdOK creates GetMountRbdOK with default headers values
+func NewGetMountRbdOK() *GetMountRbdOK {
+
+	return &GetMountRbdOK{}
+}
+
+// WithPayload adds the payload to the get mount rbd o k response
+func (o *GetMountRbdOK) WithPayload(payload *models.MountRbd) *GetMountRbdOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get mount rbd o k response
+func (o *GetMountRbdOK) SetPayload(payload *models.MountRbd) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMountRbdOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+/*GetMountRbdDefault error
+
+swagger:response getMountRbdDefault
+*/
+type GetMountRbdDefault struct {
+	_statusCode int
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetMountRbdDefault creates GetMountRbdDefault with default headers values
+func NewGetMountRbdDefault(code int) *GetMountRbdDefault {
+	if code <= 0 {
+		code = 500
+	}
+
+	return &GetMountRbdDefault{
+		_statusCode: code,
+	}
+}
+
+// WithStatusCode adds the status to the get mount rbd default response
+func (o *GetMountRbdDefault) WithStatusCode(code int) *GetMountRbdDefault {
+	o._statusCode = code
+	return o
+}
+
+// SetStatusCode sets the status to the get mount rbd default response
+func (o *GetMountRbdDefault) SetStatusCode(code int) {
+	o._statusCode = code
+}
+
+// WithPayload adds the payload to the get mount rbd default response
+func (o *GetMountRbdDefault) WithPayload(payload *models.Error) *GetMountRbdDefault {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get mount rbd default response
+func (o *GetMountRbdDefault) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetMountRbdDefault) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(o._statusCode)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
