# swagger.yml
@@ -110,6 +110,30 @@ definitions:
       options:
         $ref: "#/definitions/rbd_options"
     
+  mount_rbd:
+    type: object
+    required:
+      - id
+      - fs_type
+    properties:
+      mountpoint:
+        type: string
+        readOnly: true
+      ref:
+        type: integer
+        format: int64
+        readOnly: true
+      # external
+      id: # must be a valid rbd dev id
+        type: integer
+        format: int64
+      fs_type:
+        type: string
+      mount_options:
+        type: array
+        items:
+          type: string
+
   error:
     type: object
     required:
@@ -188,6 +212,76 @@ paths:
       responses:
         204:
           description: Unmapped
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+  
+  /mount/rbd:
+
+    get:
+      tags:
+        - mounts
+      operationId: list_mounts_rbd
+      responses:
+        200:
+          description: list of rbd mounts
+          schema:
+            type: array
+            items:
+              $ref: "#/definitions/mount_rbd"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+
+    post:
+      tags:
+        - mounts
+      operationId: mount_rbd
+      parameters:
+        - name: mount
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/mount_rbd"
+      responses:
+        201:
+          description: RBD mount succeed
+          schema:
+            $ref: "#/definitions/mount_rbd"
+        default:
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+
+  /mount/rbd/{id}:
+    parameters:
+      - type: integer
+        format: int64
+        name: id
+        in: path
+        required: true
+    get:
+      tags:
+        - mounts
+      operationId: get_mount_rbd
+      responses:
+        200:
+          description: RBD mount entry
+          schema:
+            $ref: "#/definitions/mount_rbd"
+        default: 
+          description: error
+          schema:
+            $ref: "#/definitions/error"
+    delete:
+      tags:
+        - mounts
+      operationId: unmount_rbd
+      responses:
+        204:
+          description: Unmounted
         default:
           description: error
           schema:
